refactor(architecture): harden startup, parsing, and update boundaries
Improve application architecture by isolating optional freshness checks, propagating parser I/O failures, using locale-stable name normalization, and decoding legacy GameData encodings safely. Stage and verify downloaded data before publishing updates atomically, while preserving compatibility for restored Admirals and immutable roster views.

Expand architecture, startup, persistence, GameData, Swing entry-point, and update-worker test coverage, including failure isolation and digest-mismatch scenarios.