@@ -56,319 +56,323 @@ import com.kor.admiralty.enums.Tier;
  */
 class AdmiralsStoreTest {
 
-	@TempDir
-	Path tempDir;
+    @TempDir
+    Path tempDir;
 
-	/**
-	 * Verifies complete canonical Admiral state survives a directory-backed XML round trip ready for lookup.
-	 *
-	 * @throws AdmiralsStoreException if the store cannot initialize or persist Admirals XML
-	 */
-	@Test
-	void admiralsRoundTripThroughXml() throws AdmiralsStoreException {
-		Ship activeShip = ship("Active Ship");
-		Ship maintenanceShip = ship("Maintenance Ship");
-		Ship oneTimeShip = ship("One-Time Ship");
-		GameData gameData = GameData.builder()
-				.ships(List.of(activeShip, maintenanceShip, oneTimeShip))
-				.build();
-		Admiral expected = Admiral.restore(
-				gameData,
-				"Round Trip Admiral",
-				PlayerFaction.RomulanKDF,
-				List.of(activeShip),
-				List.of(maintenanceShip),
-				List.of(oneTimeShip),
-				Map.of(activeShip, 7),
-				true);
-		Admirals original = Admirals.restore(gameData, List.of(expected));
-		AdmiralsStore store = new AdmiralsStore();
+    /**
+     * Creates one historical JAXB map entry for a usage fixture.
+     */
+    private static String usageEntry(String shipName, int count) {
+        return "<entry><key>" + shipName + "</key><value>" + count + "</value></entry>";
+    }
 
-		store.save(tempDir, original);
-		Admirals loaded = store.loadOrCreate(tempDir, gameData);
+    /**
+     * Projects canonical Ship names from immutable Roster cards.
+     */
+    private static List<String> cardNames(List<RosterCard> cards) {
+        return cards.stream().map(card -> card.getShip().getName()).collect(Collectors.toList());
+    }
 
-		assertEquals(1, loaded.getAdmirals().size());
-		Admiral actual = loaded.getAdmirals().get(0);
-		assertEquals(expected.getName(), actual.getName());
-		assertEquals(expected.getFaction(), actual.getFaction());
-		assertEquals(
-				cardNames(expected.getRoster().getActiveCardsInRosterOrder()),
-				cardNames(actual.getRoster().getActiveCardsInRosterOrder()));
-		assertEquals(
-				cardNames(expected.getRoster().getMaintenanceCardsInRosterOrder()),
-				cardNames(actual.getRoster().getMaintenanceCardsInRosterOrder()));
-		assertEquals(
-				cardNames(expected.getRoster().getOneTimeCardsInRosterOrder()),
-				cardNames(actual.getRoster().getOneTimeCardsInRosterOrder()));
-		assertEquals(expected.getUsageCounts(), actual.getUsageCounts());
-		assertEquals(expected.getPrioritizeActive(), actual.getPrioritizeActive());
-		assertEquals(List.of("Active Ship"), cardNames(actual.getRoster().getActiveCards()));
-	}
+    /**
+     * Creates a mutable Ship for an in-memory canonical-name lookup seam.
+     *
+     * @param name canonical Ship name
+     * @return representative Ship with the requested name
+     */
+    private static Ship ship(String name) {
+        return new ShipImpl(
+                ShipFaction.Federation,
+                Tier.Tier6,
+                Rarity.Epic,
+                Role.Eng,
+                name,
+                50,
+                50,
+                50,
+                RuleType.All.rewardBonus(0),
+                "");
+    }
 
-	/**
-	 * Verifies loading supplies GameData before returning runtime Admirals and canonicalizes persisted Ship names.
-	 *
-	 * @throws AdmiralsStoreException if the store cannot initialize or restore Admirals XML
-	 * @throws IOException if the historical XML fixture cannot be written
-	 */
-	@Test
-	void loadRestoresAdmiralsReadyForShipLookup() throws AdmiralsStoreException, IOException {
-		Ship canonicalShip = ship("Canonical Ship");
-		GameData gameData = GameData.builder().ships(List.of(canonicalShip)).build();
-		AdmiralsStore store = writeRosterFixture("<active>cAnOnIcAl sHiP</active>");
+    /**
+     * Verifies complete canonical Admiral state survives a directory-backed XML round trip ready for lookup.
+     *
+     * @throws AdmiralsStoreException if the store cannot initialize or persist Admirals XML
+     */
+    @Test
+    void admiralsRoundTripThroughXml() throws AdmiralsStoreException {
+        Ship activeShip = ship("Active Ship");
+        Ship maintenanceShip = ship("Maintenance Ship");
+        Ship oneTimeShip = ship("One-Time Ship");
+        GameData gameData = GameData.builder()
+                .ships(List.of(activeShip, maintenanceShip, oneTimeShip))
+                .build();
+        Admiral expected = Admiral.restore(
+                gameData,
+                "Round Trip Admiral",
+                PlayerFaction.RomulanKDF,
+                List.of(activeShip),
+                List.of(maintenanceShip),
+                List.of(oneTimeShip),
+                Map.of(activeShip, 7),
+                true);
+        Admirals original = Admirals.restore(gameData, List.of(expected));
+        AdmiralsStore store = new AdmiralsStore();
 
-		Admirals loaded = store.loadOrCreate(tempDir, gameData);
+        store.save(tempDir, original);
+        Admirals loaded = store.loadOrCreate(tempDir, gameData);
 
-		Admiral restoredAdmiral = loaded.getAdmirals().get(0);
-		assertEquals(List.of(canonicalShip.getName()), cardNames(restoredAdmiral.getRoster().getActiveCards()));
-		assertSame(canonicalShip, restoredAdmiral.getRoster().getActiveCards().get(0).getShip());
-	}
+        assertEquals(1, loaded.getAdmirals().size());
+        Admiral actual = loaded.getAdmirals().get(0);
+        assertEquals(expected.getName(), actual.getName());
+        assertEquals(expected.getFaction(), actual.getFaction());
+        assertEquals(
+                cardNames(expected.getRoster().getActiveCardsInRosterOrder()),
+                cardNames(actual.getRoster().getActiveCardsInRosterOrder()));
+        assertEquals(
+                cardNames(expected.getRoster().getMaintenanceCardsInRosterOrder()),
+                cardNames(actual.getRoster().getMaintenanceCardsInRosterOrder()));
+        assertEquals(
+                cardNames(expected.getRoster().getOneTimeCardsInRosterOrder()),
+                cardNames(actual.getRoster().getOneTimeCardsInRosterOrder()));
+        assertEquals(expected.getUsageCounts(), actual.getUsageCounts());
+        assertEquals(expected.getPrioritizeActive(), actual.getPrioritizeActive());
+        assertEquals(List.of("Active Ship"), cardNames(actual.getRoster().getActiveCards()));
+    }
 
-	/**
-	 * Verifies restoration canonicalizes saved Roster names, drops unknown Ships, collapses reusable
-	 * duplicates, and conservatively keeps conflicts in Maintenance.
-	 *
-	 * @throws AdmiralsStoreException if the store cannot initialize or restore Admirals XML
-	 * @throws IOException if the historical XML fixture cannot be written
-	 */
-	@Test
-	void loadCanonicalizesRosterAndRepairsReusableConflicts() throws AdmiralsStoreException, IOException {
-		Ship canonicalShip = ship("Canonical Ship");
-		Ship conflictShip = ship("Conflict Ship");
-		GameData gameData = GameData.builder()
-				.ships(List.of(canonicalShip, conflictShip))
-				.renamedShips(Map.of("Former Canonical Ship", canonicalShip.getName()))
-				.build();
-		AdmiralsStore store = writeRosterFixture(
-				"<active>cAnOnIcAl sHiP</active>"
-						+ "<active>Former Canonical Ship</active>"
-						+ "<active>Unknown Ship</active>"
-						+ "<active>Conflict Ship</active>"
-						+ "<maintenance>CONFLICT SHIP</maintenance>"
-						+ "<maintenance>conflict ship</maintenance>"
-						+ "<onetime>canonical ship</onetime>"
-						+ "<onetime>FORMER CANONICAL SHIP</onetime>");
+    /**
+     * Verifies loading supplies GameData before returning runtime Admirals and canonicalizes persisted Ship names.
+     *
+     * @throws AdmiralsStoreException if the store cannot initialize or restore Admirals XML
+     * @throws IOException            if the historical XML fixture cannot be written
+     */
+    @Test
+    void loadRestoresAdmiralsReadyForShipLookup() throws AdmiralsStoreException, IOException {
+        Ship canonicalShip = ship("Canonical Ship");
+        GameData gameData = GameData.builder().ships(List.of(canonicalShip)).build();
+        AdmiralsStore store = writeRosterFixture("<active>cAnOnIcAl sHiP</active>");
 
-		Admiral restored = store.loadOrCreate(tempDir, gameData).getAdmirals().get(0);
+        Admirals loaded = store.loadOrCreate(tempDir, gameData);
 
-		assertEquals(List.of(canonicalShip.getName()), cardNames(restored.getRoster().getActiveCards()));
-		assertEquals(List.of(conflictShip.getName()), cardNames(restored.getRoster().getMaintenanceCards()));
-		assertEquals(
-				List.of(canonicalShip.getName(), canonicalShip.getName()),
-				cardNames(restored.getRoster().getOneTimeCards()));
-	}
+        Admiral restoredAdmiral = loaded.getAdmirals().get(0);
+        assertEquals(List.of(canonicalShip.getName()), cardNames(restoredAdmiral.getRoster().getActiveCards()));
+        assertSame(canonicalShip, restoredAdmiral.getRoster().getActiveCards().get(0).getShip());
+    }
 
-	/**
-	 * Verifies Renamed Ship and case-variant usage names sum under the canonical Ship name.
-	 *
-	 * @throws IOException if the historical XML fixture cannot be written
-	 * @throws AdmiralsStoreException if the store cannot initialize, persist, or restore Admirals XML
-	 */
-	@Test
-	void loadSumsRenamedAndCaseVariantUsageUnderCanonicalShipNames() throws AdmiralsStoreException, IOException {
-		Ship canonicalShip = ship("Canonical Ship");
-		GameData gameData = GameData.builder()
-				.ships(List.of(canonicalShip))
-				.renamedShips(Map.of("Former Ship", canonicalShip.getName()))
-				.build();
-		AdmiralsStore store = writeAdmiralFixture(
-				"<usage>"
-						+ usageEntry("CANONICAL SHIP", 3)
-						+ usageEntry("Former Ship", 4)
-						+ usageEntry("Unknown Ship", 9)
-						+ "</usage>");
+    /**
+     * Verifies restoration canonicalizes saved Roster names, drops unknown Ships, collapses reusable
+     * duplicates, and conservatively keeps conflicts in Maintenance.
+     *
+     * @throws AdmiralsStoreException if the store cannot initialize or restore Admirals XML
+     * @throws IOException            if the historical XML fixture cannot be written
+     */
+    @Test
+    void loadCanonicalizesRosterAndRepairsReusableConflicts() throws AdmiralsStoreException, IOException {
+        Ship canonicalShip = ship("Canonical Ship");
+        Ship conflictShip = ship("Conflict Ship");
+        GameData gameData = GameData.builder()
+                .ships(List.of(canonicalShip, conflictShip))
+                .renamedShips(Map.of("Former Canonical Ship", canonicalShip.getName()))
+                .build();
+        AdmiralsStore store = writeRosterFixture(
+                "<active>cAnOnIcAl sHiP</active>"
+                        + "<active>Former Canonical Ship</active>"
+                        + "<active>Unknown Ship</active>"
+                        + "<active>Conflict Ship</active>"
+                        + "<maintenance>CONFLICT SHIP</maintenance>"
+                        + "<maintenance>conflict ship</maintenance>"
+                        + "<onetime>canonical ship</onetime>"
+                        + "<onetime>FORMER CANONICAL SHIP</onetime>");
 
-		Admiral restored = store.loadOrCreate(tempDir, gameData).getAdmirals().get(0);
+        Admiral restored = store.loadOrCreate(tempDir, gameData).getAdmirals().get(0);
 
-		assertEquals(Map.of(canonicalShip.getName(), 7), restored.getUsageCounts());
-	}
+        assertEquals(List.of(canonicalShip.getName()), cardNames(restored.getRoster().getActiveCards()));
+        assertEquals(List.of(conflictShip.getName()), cardNames(restored.getRoster().getMaintenanceCards()));
+        assertEquals(
+                List.of(canonicalShip.getName(), canonicalShip.getName()),
+                cardNames(restored.getRoster().getOneTimeCards()));
+    }
 
-	/**
-	 * Verifies corrupt negative usage fails loading even when its Ship name would otherwise be dropped.
-	 *
-	 * @throws IOException if the corrupt historical XML fixture cannot be written
-	 * @throws AdmiralsStoreException if fixture setup cannot initialize or persist Admirals XML
-	 */
-	@Test
-	void loadRejectsNegativeUsageBeforeDroppingUnknownShips() throws AdmiralsStoreException, IOException {
-		AdmiralsStore store = writeAdmiralFixture(
-				"<usage>" + usageEntry("Unknown Ship", -1) + "</usage>");
+    /**
+     * Verifies Renamed Ship and case-variant usage names sum under the canonical Ship name.
+     *
+     * @throws IOException            if the historical XML fixture cannot be written
+     * @throws AdmiralsStoreException if the store cannot initialize, persist, or restore Admirals XML
+     */
+    @Test
+    void loadSumsRenamedAndCaseVariantUsageUnderCanonicalShipNames() throws AdmiralsStoreException, IOException {
+        Ship canonicalShip = ship("Canonical Ship");
+        GameData gameData = GameData.builder()
+                .ships(List.of(canonicalShip))
+                .renamedShips(Map.of("Former Ship", canonicalShip.getName()))
+                .build();
+        AdmiralsStore store = writeAdmiralFixture(
+                "<usage>"
+                        + usageEntry("CANONICAL SHIP", 3)
+                        + usageEntry("Former Ship", 4)
+                        + usageEntry("Unknown Ship", 9)
+                        + "</usage>");
 
-		assertThrows(
-				AdmiralsStoreException.class,
-				() -> store.loadOrCreate(tempDir, GameData.builder().build()));
-	}
+        Admiral restored = store.loadOrCreate(tempDir, gameData).getAdmirals().get(0);
 
-	/**
-	 * Verifies summing historical names cannot wrap a canonical Ship's usage count.
-	 *
-	 * @throws IOException if the overflowing historical XML fixture cannot be written
-	 * @throws AdmiralsStoreException if fixture setup cannot initialize or persist Admirals XML
-	 */
-	@Test
-	void loadRejectsCanonicalUsageOverflow() throws AdmiralsStoreException, IOException {
-		Ship canonicalShip = ship("Canonical Ship");
-		GameData gameData = GameData.builder()
-				.ships(List.of(canonicalShip))
-				.renamedShips(Map.of("Former Ship", canonicalShip.getName()))
-				.build();
-		AdmiralsStore store = writeAdmiralFixture(
-				"<active>" + canonicalShip.getName() + "</active>"
-						+ "<usage>"
-						+ usageEntry(canonicalShip.getName(), Integer.MAX_VALUE)
-						+ usageEntry("Former Ship", 1)
-						+ "</usage>");
+        assertEquals(Map.of(canonicalShip.getName(), 7), restored.getUsageCounts());
+    }
 
-		AdmiralsStoreException failure = assertThrows(
-				AdmiralsStoreException.class,
-				() -> store.loadOrCreate(tempDir, gameData));
+    /**
+     * Verifies corrupt negative usage fails loading even when its Ship name would otherwise be dropped.
+     *
+     * @throws IOException            if the corrupt historical XML fixture cannot be written
+     * @throws AdmiralsStoreException if fixture setup cannot initialize or persist Admirals XML
+     */
+    @Test
+    void loadRejectsNegativeUsageBeforeDroppingUnknownShips() throws AdmiralsStoreException, IOException {
+        AdmiralsStore store = writeAdmiralFixture(
+                "<usage>" + usageEntry("Unknown Ship", -1) + "</usage>");
 
-		assertInstanceOf(ArithmeticException.class, failure.getCause());
-	}
+        assertThrows(
+                AdmiralsStoreException.class,
+                () -> store.loadOrCreate(tempDir, GameData.builder().build()));
+    }
 
-	/**
-	 * Verifies first use persists and returns the standard one-Admiral default container.
-	 *
-	 * @throws AdmiralsStoreException if the store cannot initialize or persist default Admirals XML
-	 */
-	@Test
-	void loadOrCreateWritesDefaultAdmiralsOnFirstRun() throws AdmiralsStoreException {
-		AdmiralsStore store = new AdmiralsStore();
+    /**
+     * Verifies summing historical names cannot wrap a canonical Ship's usage count.
+     *
+     * @throws IOException            if the overflowing historical XML fixture cannot be written
+     * @throws AdmiralsStoreException if fixture setup cannot initialize or persist Admirals XML
+     */
+    @Test
+    void loadRejectsCanonicalUsageOverflow() throws AdmiralsStoreException, IOException {
+        Ship canonicalShip = ship("Canonical Ship");
+        GameData gameData = GameData.builder()
+                .ships(List.of(canonicalShip))
+                .renamedShips(Map.of("Former Ship", canonicalShip.getName()))
+                .build();
+        AdmiralsStore store = writeAdmiralFixture(
+                "<active>" + canonicalShip.getName() + "</active>"
+                        + "<usage>"
+                        + usageEntry(canonicalShip.getName(), Integer.MAX_VALUE)
+                        + usageEntry("Former Ship", 1)
+                        + "</usage>");
 
-		Admirals loaded = store.loadOrCreate(tempDir, GameData.builder().build());
+        AdmiralsStoreException failure = assertThrows(
+                AdmiralsStoreException.class,
+                () -> store.loadOrCreate(tempDir, gameData));
 
-		assertTrue(Files.isRegularFile(tempDir.resolve("admirals.xml")));
-		assertEquals(1, loaded.getAdmirals().size());
-		Admiral defaultAdmiral = loaded.getAdmirals().get(0);
-		assertEquals("New Admiral", defaultAdmiral.getName());
-		assertTrue(defaultAdmiral.getRoster().getActiveCards().isEmpty());
-	}
+        assertInstanceOf(ArithmeticException.class, failure.getCause());
+    }
 
-	/**
-	 * Verifies malformed persisted XML fails fast through the store's checked load contract.
-	 *
-	 * @throws IOException if the corrupt fixture cannot be written or reread
-	 * @throws AdmiralsStoreException if the store cannot initialize before exercising its load contract
-	 */
-	@Test
-	void corruptAdmiralsXmlThrowsCheckedException() throws IOException, AdmiralsStoreException {
-		Path corruptFile = tempDir.resolve("admirals.xml");
-		Files.writeString(corruptFile, "<admirals><admiral>");
-		AdmiralsStore store = new AdmiralsStore();
+    /**
+     * Verifies first use persists and returns the standard one-Admiral default container.
+     *
+     * @throws AdmiralsStoreException if the store cannot initialize or persist default Admirals XML
+     */
+    @Test
+    void loadOrCreateWritesDefaultAdmiralsOnFirstRun() throws AdmiralsStoreException {
+        AdmiralsStore store = new AdmiralsStore();
 
-		AdmiralsStoreException failure = assertThrows(
-				AdmiralsStoreException.class,
-				() -> store.loadOrCreate(tempDir, GameData.builder().build()));
-		assertInstanceOf(JAXBException.class, failure.getCause());
-		assertEquals("<admirals><admiral>", Files.readString(corruptFile));
-	}
+        Admirals loaded = store.loadOrCreate(tempDir, GameData.builder().build());
 
-	/**
-	 * Verifies exported display names import through GameData as canonical persisted Ship names.
-	 *
-	 * @throws IOException if the exported text fixture cannot be read or rewritten
-	 * @throws AdmiralsStoreException if the store cannot initialize
-	 */
-	@Test
-	void exportedShipNamesImportCanonicallyWithDifferentCasing() throws IOException, AdmiralsStoreException {
-		Ship alpha = ship("Canonical Alpha");
-		Ship beta = ship("Canonical Beta");
-		GameData gameData = GameData.builder().ships(List.of(alpha, beta)).build();
-		Path shipList = tempDir.resolve("ships.txt");
-		AdmiralsStore store = new AdmiralsStore();
+        assertTrue(Files.isRegularFile(tempDir.resolve("admirals.xml")));
+        assertEquals(1, loaded.getAdmirals().size());
+        Admiral defaultAdmiral = loaded.getAdmirals().get(0);
+        assertEquals("New Admiral", defaultAdmiral.getName());
+        assertTrue(defaultAdmiral.getRoster().getActiveCards().isEmpty());
+    }
 
-		assertTrue(store.exportShipNames(shipList.toFile(), List.of(alpha, beta)));
-		assertEquals(List.of(alpha.getDisplayName(), beta.getDisplayName()), Files.readAllLines(shipList));
-		Files.write(shipList, List.of("cAnOnIcAl aLpHa", beta.getDisplayName()));
-		Admiral imported = new Admiral(gameData);
-		List<RosterChange> changes = new ArrayList<RosterChange>();
-		imported.addRosterChangeListener(changes::add);
+    /**
+     * Verifies malformed persisted XML fails fast through the store's checked load contract.
+     *
+     * @throws IOException            if the corrupt fixture cannot be written or reread
+     * @throws AdmiralsStoreException if the store cannot initialize before exercising its load contract
+     */
+    @Test
+    void corruptAdmiralsXmlThrowsCheckedException() throws IOException, AdmiralsStoreException {
+        Path corruptFile = tempDir.resolve("admirals.xml");
+        Files.writeString(corruptFile, "<admirals><admiral>");
+        AdmiralsStore store = new AdmiralsStore();
 
-		assertEquals(2, store.importShipNames(shipList.toFile(), gameData, imported));
-		assertEquals(List.of(alpha.getName(), beta.getName()), cardNames(imported.getRoster().getActiveCards()));
-		assertEquals(1, changes.size());
-		assertEquals(1L, imported.getRoster().getRevision());
-	}
+        AdmiralsStoreException failure = assertThrows(
+                AdmiralsStoreException.class,
+                () -> store.loadOrCreate(tempDir, GameData.builder().build()));
+        assertInstanceOf(JAXBException.class, failure.getCause());
+        assertEquals("<admirals><admiral>", Files.readString(corruptFile));
+    }
 
-	/**
-	 * Verifies a broken JAXB provider prevents store construction instead of leaving unusable state behind.
-	 */
-	@Test
-	@ResourceLock(Resources.SYSTEM_PROPERTIES)
-	void constructingStorePropagatesJaxbInitializationFailure() {
-		String propertyName = JAXBContext.JAXB_CONTEXT_FACTORY;
-		String previousFactory = System.getProperty(propertyName);
-		try {
-			System.setProperty(propertyName, "com.kor.admiralty.test.MissingJaxbContextFactory");
+    /**
+     * Verifies exported display names import through GameData as canonical persisted Ship names.
+     *
+     * @throws IOException            if the exported text fixture cannot be read or rewritten
+     * @throws AdmiralsStoreException if the store cannot initialize
+     */
+    @Test
+    void exportedShipNamesImportCanonicallyWithDifferentCasing() throws IOException, AdmiralsStoreException {
+        Ship alpha = ship("Canonical Alpha");
+        Ship beta = ship("Canonical Beta");
+        GameData gameData = GameData.builder().ships(List.of(alpha, beta)).build();
+        Path shipList = tempDir.resolve("ships.txt");
+        AdmiralsStore store = new AdmiralsStore();
 
-			AdmiralsStoreException failure = assertThrows(AdmiralsStoreException.class, AdmiralsStore::new);
-			assertInstanceOf(JAXBException.class, failure.getCause());
-		} finally {
-			if (previousFactory == null) {
-				System.clearProperty(propertyName);
-			} else {
-				System.setProperty(propertyName, previousFactory);
-			}
-		}
-	}
+        assertTrue(store.exportShipNames(shipList.toFile(), List.of(alpha, beta)));
+        assertEquals(List.of(alpha.getDisplayName(), beta.getDisplayName()), Files.readAllLines(shipList));
+        Files.write(shipList, List.of("cAnOnIcAl aLpHa", beta.getDisplayName()));
+        Admiral imported = new Admiral(gameData);
+        List<RosterChange> changes = new ArrayList<RosterChange>();
+        imported.addRosterChangeListener(changes::add);
 
-	/**
-	 * Writes raw historical Roster elements without routing invalid pre-canonical values through runtime Admiral.
-	 *
-	 * @param rosterElements repeated historical Active, Maintenance, and One-Time elements
-	 * @return initialized store ready to restore the written fixture
-	 * @throws IOException if the fixture cannot be written
-	 * @throws AdmiralsStoreException if the store cannot initialize
-	 */
-	private AdmiralsStore writeRosterFixture(String rosterElements) throws IOException, AdmiralsStoreException {
-		return writeAdmiralFixture(rosterElements + "<usage/>");
-	}
+        assertEquals(2, store.importShipNames(shipList.toFile(), gameData, imported));
+        assertEquals(List.of(alpha.getName(), beta.getName()), cardNames(imported.getRoster().getActiveCards()));
+        assertEquals(1, changes.size());
+        assertEquals(1L, imported.getRoster().getRevision());
+    }
 
-	/**
-	 * Writes arbitrary historical Admiral child elements directly through the JAXB wire format.
-	 *
-	 * @param admiralElements ordered child elements after name and faction
-	 * @return initialized store ready to restore the written fixture
-	 * @throws IOException if the fixture cannot be written
-	 * @throws AdmiralsStoreException if the store cannot initialize
-	 */
-	private AdmiralsStore writeAdmiralFixture(String admiralElements) throws IOException, AdmiralsStoreException {
-		String xml = "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>"
-				+ "<admirals><admiral prioritizeActive=\"true\">"
-				+ "<name>Historical Fixture Admiral</name><faction>Federation</faction>"
-				+ admiralElements
-				+ "</admiral></admirals>";
-		Files.writeString(tempDir.resolve("admirals.xml"), xml);
-		return new AdmiralsStore();
-	}
+    /**
+     * Verifies a broken JAXB provider prevents store construction instead of leaving unusable state behind.
+     */
+    @Test
+    @ResourceLock(Resources.SYSTEM_PROPERTIES)
+    void constructingStorePropagatesJaxbInitializationFailure() {
+        String propertyName = JAXBContext.JAXB_CONTEXT_FACTORY;
+        String previousFactory = System.getProperty(propertyName);
+        try {
+            System.setProperty(propertyName, "com.kor.admiralty.test.MissingJaxbContextFactory");
 
-	/** Creates one historical JAXB map entry for a usage fixture. */
-	private static String usageEntry(String shipName, int count) {
-		return "<entry><key>" + shipName + "</key><value>" + count + "</value></entry>";
-	}
+            AdmiralsStoreException failure = assertThrows(AdmiralsStoreException.class, AdmiralsStore::new);
+            assertInstanceOf(JAXBException.class, failure.getCause());
+        } finally {
+            if (previousFactory == null) {
+                System.clearProperty(propertyName);
+            } else {
+                System.setProperty(propertyName, previousFactory);
+            }
+        }
+    }
 
-	/** Projects canonical Ship names from immutable Roster cards. */
-	private static List<String> cardNames(List<RosterCard> cards) {
-		return cards.stream().map(card -> card.getShip().getName()).collect(Collectors.toList());
-	}
+    /**
+     * Writes raw historical Roster elements without routing invalid pre-canonical values through runtime Admiral.
+     *
+     * @param rosterElements repeated historical Active, Maintenance, and One-Time elements
+     * @return initialized store ready to restore the written fixture
+     * @throws IOException            if the fixture cannot be written
+     * @throws AdmiralsStoreException if the store cannot initialize
+     */
+    private AdmiralsStore writeRosterFixture(String rosterElements) throws IOException, AdmiralsStoreException {
+        return writeAdmiralFixture(rosterElements + "<usage/>");
+    }
 
-	/**
-	 * Creates a mutable Ship for an in-memory canonical-name lookup seam.
-	 *
-	 * @param name canonical Ship name
-	 * @return representative Ship with the requested name
-	 */
-	private static Ship ship(String name) {
-		return new ShipImpl(
-				ShipFaction.Federation,
-				Tier.Tier6,
-				Rarity.Epic,
-				Role.Eng,
-				name,
-				50,
-				50,
-				50,
-				RuleType.All.rewardBonus(0),
-				"");
-	}
+    /**
+     * Writes arbitrary historical Admiral child elements directly through the JAXB wire format.
+     *
+     * @param admiralElements ordered child elements after name and faction
+     * @return initialized store ready to restore the written fixture
+     * @throws IOException            if the fixture cannot be written
+     * @throws AdmiralsStoreException if the store cannot initialize
+     */
+    private AdmiralsStore writeAdmiralFixture(String admiralElements) throws IOException, AdmiralsStoreException {
+        String xml = "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>"
+                + "<admirals><admiral prioritizeActive=\"true\">"
+                + "<name>Historical Fixture Admiral</name><faction>Federation</faction>"
+                + admiralElements
+                + "</admiral></admirals>";
+        Files.writeString(tempDir.resolve("admirals.xml"), xml);
+        return new AdmiralsStore();
+    }
 }
